# robotics-simulator

./: README.md
robotics_simulator/: CMakeLists.txt  package.xml
robotics_simulator/launch/: hector_mapping.launch  joy_control.launch  tricycle_navigation.launch  tricycle_slam.launch
robotics_simulator/src/: joy_control.cpp
tricycle/: CMakeLists.txt  package.xml
tricycle/launch/: hector_mapping.launch  navigation.launch  scan_unifier_config.yaml  slam_gmapping.launch  test.launch  tricycle.launch  urdf.launch
tricycle/meshes/: base.stl  caster.stl  lidar.stl  wheel.stl
tricycle/navfiles/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  slam_gmapping_both_lidars.pgm  slam_gmapping_both_lidars.yaml
tricycle/rviz/: test.rviz  urdf.rviz
tricycle/src/: control.cpp  odom.cpp  tf_broadcaster.cpp
tricycle/urdf/: tricycle.xacro
vrep/: tricycle.ttt
