<package>
  <name>tricycle</name>
  <description>Tricycle package</description>
  <maintainer email="aka.montoya@gmail.com">Ivan Gerasimov</maintainer>
  <version>0.0.1</version>
  <author>Ivan Gerasimov</author>
  <license>GPLv3</license>
  <url></url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>vrep_common</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>vrep_common</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


